Edited some layout issues, added nicer info-icons.

--- a/frontend/src/components/App.css
+++ b/frontend/src/components/App.css
@@ -72,7 +72,7 @@
   position: fixed;
   left: 100%;
   display: inline-block;
-  margin-left: 8px;
+  margin-left: 10px;
 }
 
 .infoIcon {
@@ -91,12 +91,15 @@
 }
 
 .tooltipText {
+  position: absolute;
+  left: 130%;
+  top: 50%;
+  transform: translateY(-50%);
+  white-space: pre-line;
   visibility: hidden;
   opacity: 0;
   transition: opacity 0.2s ease;
   position: absolute;
-  left: 50%;
-  transform: translateX(25%);
   width: 250px;
   padding: 20px;
   border-radius: 8px;
@@ -111,6 +114,7 @@
 .tooltip:hover .tooltipText {
   visibility: visible;
   opacity: 1;
+  white-space: pre-line;
 }
 .titleblock{
   color: transparent;
